--- a/package.json
+++ b/package.json
@@ -6,5 +6,20 @@
   "repository": "www.git.com",
   "author": "gilmarb",
   "license": "free",
-  "private": null
+  "private": null,
+  "scripts": {
+    "test": "jest",
+    "start": "nodemon src/server.js"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.20",
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.0",
+    "supertest": "^6.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
